Fix image not showing.

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     box-sizing: inherit;
   }
   body {
-      background-image: url(images/hu-chen-60XLoOgwkfA-unsplash.jpg);
+      background-image: url(/images/hu-chen-60XLoOgwkfA-unsplash.jpg);
       background-size: 48cm;
       background-repeat: no-repeat;
   }
